# app/Models/Cart.php
@@ -19,13 +19,14 @@ class Cart extends Model
      *  @OA\Property(type="integer", title="user_id", default="1",property="user_id"),
      *  @OA\Property(type="string", title="product_name", default="Gucci Shirt",property="product_name"),
      *  @OA\Property(type="integer", title="product_id", default="1",property="product_id"),
+     *  @OA\Property(type="string", title="image", default="https://res.cloudinary.com/mykb/image/upload/v1643027274/e-com-app/images/products/default/no-image.png",property="image"),
      *  @OA\Property(type="integer", title="quantity", default="1",property="quantity"),
      *  @OA\Property(type="double", title="price", default="199.99",property="price"),
      *
      */
     use HasFactory;
 
-    protected $fillable = ['product_name', 'product_price', 'quantity', 'user_id', 'product_id'];
+    protected $fillable = ['product_name', 'product_price', 'image', 'quantity', 'user_id', 'product_id'];
 
     protected $table = 'cart';
 }
